New item can be added.

--- a/views/pages/showitem.ejs
+++ b/views/pages/showitem.ejs
@@ -1,9 +1,10 @@
 <html>
 <head>
-	<title></title>
+	<title>Feltöltés sikeres</title>
 </head>
 <body>
 	<%= item %>
+	<br/>
 	<%= count %>
 	<br/>
 	<a href="upload">upload</a>
