--- a/views/pages/upload.ejs
+++ b/views/pages/upload.ejs
@@ -7,7 +7,7 @@
 </head>
 <body onload="init()">
 <h1>Feltöltés</h1>
-<form method="post" action="/upload">
+<form method="post" action="/showitem">
     <fieldset>
         <legend>Alap adatok</legend>
         <label>Tárgy: </label>
@@ -22,6 +22,7 @@
         <input name="count" type="text" value="1" placeholder="Darabszám" required>
         <br/>
         <input type="submit" value="Feltöltés!">
+    </fieldset>
 </form>
 
 <script>
