--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,10 +1,3 @@
-<!doctype html>
-<html lang="hu">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SCH Szeretár</title>
-</head>
-<body>
+<% include ../partials/header %>
 <a href="main"><button>Hi</button></a>
-</body>
+<% include ../partials/footer %>
