--- a/views/pages/main.ejs
+++ b/views/pages/main.ejs
@@ -1,11 +1,4 @@
-<!doctype html>
-<html lang="hu">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SCH Szeretár: Főoldal</title>
-</head>
-<body>
+<% include ../partials/header %>
 <% if (message !== undefined) { %>
     <h3> <%= message %> </h3>
 <% } %>
@@ -86,5 +79,4 @@
         }
     }
 </script>
-</body>
-</html>
+<% include ../partials/footer %>
