create public dir for static files

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,3 +1,3 @@
 <% include ../partials/header %>
-<a href="main"><button>Hi</button></a>
+<a href="main"><button>Continue</button></a>
 <% include ../partials/footer %>
