change routing from /main to / and add istanbul as dev dependency

--- a/views/pages/main.ejs
+++ b/views/pages/main.ejs
@@ -4,7 +4,7 @@
 <% } %>
 <h1>SCH szertár</h1>
 <h2>Feltöltés</h2>
-<form method="post" action="/main">
+<form method="post" action="/">
     <fieldset>
         <legend>Alap adatok</legend>
         <label>Tárgy: </label>
@@ -23,7 +23,7 @@
     </fieldset>
 </form>
 <h2>Törlés</h2>
-<form method="post" action="/main/delete">
+<form method="post" action="/delete">
     <fieldset>
         <legend>Alap adatok</legend>
         <label>Tárgy: </label>
