--- a/views/pages/main.ejs
+++ b/views/pages/main.ejs
@@ -5,7 +5,7 @@
 <div class="container">
     <h1>SCH szertár</h1>
     <div class="row">
-        <div class="col-lg-5">
+        <div class="col-md-5">
             <h2>Feltöltés</h2>
             <form method="post" action="/">
                 <fieldset>
@@ -26,7 +26,7 @@
                 </fieldset>
             </form>
         </div>
-        <div class="col-lg-5">
+        <div class="col-md-5">
             <h2>Törlés</h2>
             <form method="post" action="/delete">
                 <fieldset>
@@ -49,16 +49,49 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-12">
-            <h2>A szertár elemei</h2>
-            <table>
-                <% for(var i=0; i < items.length; i++) { %>
-                <tr>
-                    <td><%= items[i].name %></td>
-                    <td><%= items[i].count %></td>
-                </tr>
-                <% } %>
-            </table>
+        <div class="col-md-8">
+            <form>
+                <caption>Új elemhozzáadása</caption><br>
+                <label for="nev">Név:</label><input type="text" name="nev" id="nev">
+                <label for="db">Darabszám:</label><input type="number" min="0" name="count" id="db">
+                <button type="submit" class="btn btn-dark">Küldés</button>
+            </form>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="table-responsive">
+                <table class="table table-bordered">
+                    <caption>A szertár elemei</caption>
+                    <thead>
+                    <th>Név</th>
+                    <th>Darabszám</th>
+                    <th>Szerkesztés</th>
+                    <th>Eltávolítás</th>
+                    </thead>
+                    <tbody>
+                    <% for(var i=0; i < items.length; i++) { %>
+                    <tr>
+                        <td><%= items[i].name %></td>
+                        <td>
+                            <button class="btn btn-success">+</button>
+                            <%= items[i].count %>
+                            <button type="button" class="btn btn-danger">-</button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></button>
+                            <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button>
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
+                        </td>
+                    </tr>
+                    <% } %>
+
+                    </tbody>
+                </table>
+
+            </div>
         </div>
     </div>
 </div>
