--- a/views/pages/main.ejs
+++ b/views/pages/main.ejs
@@ -4,7 +4,7 @@
 <% } %>
 <div class="container">
     <h1>SCH szertár</h1>
-    <div class="row">
+    <div class="row" style="display: none">
         <div class="col-md-5">
             <h2>Feltöltés</h2>
             <form method="post" action="/">
@@ -72,22 +72,20 @@
                     <tbody>
                     <% for(var i=0; i < items.length; i++) { %>
                     <tr>
-                        <td><%= items[i].name %></td>
+                        <td><span id="item<%=i%>" data-id="<%= items[i]._id %>" data-name="<%= items[i].name %>" data-count="<%= items[i].count %>"><%= items[i].name %></span></td>
                         <td>
-                            <button class="btn btn-success">+</button>
-                            <%= items[i].count %>
-                            <button type="button" class="btn btn-danger">-</button>
+                            <button onclick="increment(<%=i%>)" class="btn btn-success">+</button>
+                            <span id="count<%=i%>"><%= items[i].count %></span>
+                            <button onclick="decrement(<%=i%>)" type="button" class="btn btn-danger">-</button>
                         </td>
                         <td>
-                            <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></button>
-                            <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button>
+                            <button type="button" onclick="edit(<%=i%>)" class="btn btn-default"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button>
                         </td>
                         <td>
                             <button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
                         </td>
                     </tr>
                     <% } %>
-
                     </tbody>
                 </table>
 
@@ -95,4 +93,59 @@
         </div>
     </div>
 </div>
+<div class="overlay" id="overlay">
+    <div class="edit">
+        <form method="post" action="/item">
+            <h3>Edit</h3>
+            <input type="hidden" name="id" id="id">
+            <label for="name">Név:</label><input type="text" id="name" name="name"><br>
+            <label for="count">Mennyiség:</label><input type="number" min="0" id="count" name="count"><br>
+            <button class="btn btn-success">Mehet</button>
+        </form>
+        <form method="get" action="/delete">
+            <input type="hidden" name="id" value="">
+            <button class="btn btn-danger">Törlés</button>
+        </form>
+        <button class="btn btn-neutral" onclick="cancel()">Mégse</button>
+
+    </div>
+</div>
+<script>
+    function increment(i) {
+        var id=$("#item"+i).data("id");
+        var adat={id:id}
+        $.ajax({
+            type: "POST",
+            url: "/item/increase",
+            data: adat,
+            context: document.body
+        }).done(function (response) {
+            $("#count"+i).text(response);
+        });
+    }
+    function decrement(i) {
+        var id=$("#item"+i).data("id");
+        var adat={id:id}
+        $.ajax({
+            type: "POST",
+            url: "/item/decrease",
+            data: adat,
+            context: document.body
+        }).done(function (response) {
+            $("#count"+i).text(response);
+        });
+    }
+    function edit(i) {
+        var id = $("#item" + i).data("id");
+        var name = $("#item" + i).data("name");
+        var count = parseInt($("#item" + i).data("count"));
+        $("#overlay").css("display", "inline");
+        $('input[id=id]').val(id);
+        $('input[id=name]').val(name);
+        $('input[id=count]').attr('value',count);
+    }
+    function cancel(){
+        $("#overlay").css("display", "none");
+    }
+</script>
 <% include ../partials/footer %>
