--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,11 @@
+body{
+    padding-top: 70px;
+}
+
+.card{
+    margin: 10px 0;
+}
+
 .overlay {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
