--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,15 +1,63 @@
 <!doctype html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
+    <link href="/css/fa-svg-with-js.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet" type="text/css">
-     <title>SCH Szeretár: Főoldal</title>
+    
+    <title>SCH Szertár: Főoldal</title>
 </head>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <a class="navbar-brand" href="/">SCH Szertár</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item <% if(!active){ %> active <% } %>">
+                <a class="nav-link" href="/">Eszközök
+                    <span class="sr-only">(current)</span>
+                </a>
+            </li>
+            <li class="nav-item <% if(active === 'about'){ %> active <% } %>">
+                <a class="nav-link" href="/about">Rólunk</a>
+            </li>
+            <% if(user && user.isAdmin) { %>
+            <li class="nav-item <% if(active === 'admin'){ %> active <% } %>">
+                <a class="nav-link" href="/admin">Admin</a>
+            </li>
+            <% } %>
+        </ul>
+        <% if(user) { %>
+            <ul class="nav navbar-nav ml-auto">
+
+                <li class="nav-item dropdown active">
+                    <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">
+                        Szia, <%= user.name %>!
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="/user/rents">Kölcsönzéseim</a>
+                        <a class="dropdown-item" href="/user/cart">Kosár</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="/auth/logout">Kijelentkezés</a>
+                    </div>
+                </li>
+            </ul>
+
+            <% } else { %>
+                <form action="/auth/login" method="GET" class="form-inline my-2 my-lg-0">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Bejelentkezés AuthSCH-val</button>
+                </form>
+                <% } %>
+    </div>
+</nav>
+
 <body>
