Fixed add new item on admin page

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -5,9 +5,9 @@
 
     <div class="row">
         <div class="col-md-8">
-            <form>
+            <form action="/item" method="POST">
                 <caption>Új elemhozzáadása</caption><br>
-                <label for="nev">Név:</label><input type="text" name="nev" id="nev">
+                <label for="nev">Név:</label><input type="text" name="item" id="nev">
                 <label for="db">Darabszám:</label><input type="number" min="0" name="count" id="db">
                 <button type="submit" class="btn btn-dark">Küldés</button>
             </form>
