--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -5,7 +5,7 @@
 
     <div class="row">
         <div class="col-md-8">
-            <form action="/item" method="POST">
+            <form action="/item/create" method="POST">
                 <caption>Új elemhozzáadása</caption><br>
                 <label for="nev">Név:</label><input type="text" name="item" id="nev">
                 <label for="db">Darabszám:</label><input type="number" min="0" name="count" id="db">
