edit item count

--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -52,7 +52,7 @@
 </div>
 <div class="overlay" id="edit-overlay">
     <div class="edit overlay-content">
-        <form class="form" method="POST" action="/item">
+        <form class="form" method="POST" action="/item/edit">
             <legend>Szerkesztés</legend>
             <input type="hidden" name="id" id="id">
             <fieldset class="form-group">
