--- a/views/pages/main.ejs
+++ b/views/pages/main.ejs
@@ -11,9 +11,9 @@
                         <h3><%= item.name %></h3>
                         <p class="description"> Darabszám: <%= item.count %></p>
                         <p class="description"> Készleten: <%= item.stock %></p>
-                        <form action="#" method="GET" class="form-inline my-2 my-lg-0">
-                            <input class="form-control" type="number" value="1" size="3"></input>
-                            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Kosárba</button>
+                        <form action="/item/rent" method="POST" class="form-inline my-2 my-lg-0">
+                            <input type = "hidden" name = "itemId" value = <%= item._id %>>
+                            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Kölcsönzés</button>
                         </form>
                     </div>
                 </div>
