Restructure, refactor, fix bugs
Project now starts with node bin/www

--- a/views/pages/cart.ejs
+++ b/views/pages/cart.ejs
@@ -1,5 +1,7 @@
 <% include ../partials/header %>
-    <p>
-        Add cart
-    </p>
+    <div class="container">
+        <p>
+            Add cart
+        </p>
+    </div>
 <% include ../partials/footer %>
