--- a/views/pages/rents.ejs
+++ b/views/pages/rents.ejs
@@ -1,5 +1,7 @@
 <% include ../partials/header %>
-    <p>
-        Add rents
-    </p>
+    <div class="container">
+        <p>
+            Add rents
+        </p>
+    </div>
 <% include ../partials/footer %>
