--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,16 +18,16 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item <% if(!active){ %> active <% } %>">
+            <li class="nav-item <% if(!active[1]){ %> active <% } %>">
                 <a class="nav-link" href="/">Eszközök
                     <span class="sr-only">(current)</span>
                 </a>
             </li>
-            <li class="nav-item <% if(active === 'about'){ %> active <% } %>">
+            <li class="nav-item <% if(active[1] === 'about'){ %> active <% } %>">
                 <a class="nav-link" href="/about">Rólunk</a>
             </li>
             <% if(user && user.isAdmin) { %>
-            <li class="nav-item <% if(active === 'admin'){ %> active <% } %>">
+            <li class="nav-item <% if(active[1] === 'admin'){ %> active <% } %>">
                 <a class="nav-link" href="/admin">Admin</a>
             </li>
             <% } %>
